Used bootstrap to temp fix contacts section clipping on mobile, added linkedin link

--- a/styles.css
+++ b/styles.css
@@ -249,17 +249,12 @@ a {
 }
 
 .contacts-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
-  justify-content: center;
   font-size: 3rem;
-  gap: 3.3rem;
 }
 
 .animated {
   transition: transform 0.3s ease;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 .animated:hover {
